# ChangeLog for app-editors/emacs-xwidget
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Mar 2013; Ulrich Müller <ulm@gentoo.org> emacs-xwidget-24.3.9999.ebuild,
  metadata.xml:
  Merge changes from emacs-vcs.

*emacs-xwidget-24.3.9999 (17 Nov 2012)

  17 Nov 2012; Ulrich Müller <ulm@gentoo.org> -emacs-xwidget-24.2.9999.ebuild,
  +emacs-xwidget-24.3.9999.ebuild:
  Version number has changed upstream.

  24 Oct 2012; Ulrich Müller <ulm@gentoo.org> emacs-xwidget-24.2.9999.ebuild:
  Update dependency after package move from x11-libs/openmotif to
  x11-libs/motif.

  05 Oct 2012; Ulrich Müller <ulm@gentoo.org> emacs-xwidget-24.2.9999.ebuild:
  With USE=xwidgets, add webkit-gtk as dependency and enable gtk3. Drop ~hppa
  and ~sh keywords.

*emacs-xwidget-24.2.9999 (04 Oct 2012)

  04 Oct 2012; Ulrich Müller <ulm@gentoo.org> -emacs-xwidget-24.0.9999.ebuild,
  +emacs-xwidget-24.2.9999.ebuild, metadata.xml:
  Update from emacs-vcs ebuild.

*emacs-xwidget-24.0.9999 (30 Sep 2011)

  30 Sep 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-xwidget-24.0.9999.ebuild,
  +metadata.xml:
  Emacs xwidget branch.
