@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Mar 2013; Ulrich Müller <ulm@gentoo.org> emacs-xwidget-24.3.9999.ebuild,
+  metadata.xml:
+  Merge changes from emacs-vcs.
+
   21 Mar 2013; Ulrich Müller <ulm@gentoo.org> emacs-xwidget-24.3.9999.ebuild,
   metadata.xml:
   Merge changes from emacs-vcs.
